core/compiler/tests/programs/ok/generic_1.loz
f :: [a] b -> [a]
f [] _ = []
f [x : xs] b = [x : f xs 18]

Main = f [1, 2, 3] "srtr"