core/compiler/tests/programs/type_err/generic_2.loz
f :: [a] -> [b]
f [] = []
f [a:as] = [a : f as]

main = f [18]